--- a/index.html
+++ b/index.html
@@ -1,10 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
+
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li>
+          <a class="link__active" href="#main">главная</a>
+        </li>
+        <li>
+          <a class="link__inactive" href="#lots">посмотреть лоты</a>
+        </li>
+        <li>
+          <a class="link__inactive" href="#about">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <a href="">
+      <img class="header__logo" src="./images/logo-black.svg" alt="логотип">
+    </a>
+    <address class="header__address">
+      <p>
+        <a class="link__inactive" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <br><a class="link__inactive" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br>наб. Принсенграхт 263- 265, Амстердам
+      </p>
+    </address>
+  </header>
+
+  <main>
+    <section id="main" class="cover">
+      <div class="overlay">
+        <h1 class="cover__title">
+          <span class="align-text-left">ОН<span class="no-letter-spacing">О</span></span>
+          <span class="aligned-text-center">ТЕБ<span class="no-letter-spacing">Е</span></span>
+          <span class="aligned-text-right">НАД<span class="no-letter-spacing">О</span></span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </div>
+    </section>
+    <section id="lots" class="lots">
+      <h2 class="lots__title">ЛОТЫ</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="">
+            <article class="card card_type_film">
+              <div class="overlay">
+                <h4 class="card__title">Фильм режиссёра, который бросил киношколу</h4>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                  знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item ">
+          <a class="card-link" href="">
+            <article class="card card_type_book">
+              <div class="overlay">
+                <h4 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h4>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                  древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
+                  на «Улисса» Джеймса Джойса?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="">
+            <article class="card card_type_picture">
+              <div class="overlay">
+                <h4 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                  инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не
+                  знали, что это — одна из революционных работ Кандинского?</p>
+              </div>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link link__inactive" href="">посмотреть больше</a>
+    </section>
+    <section id="about" class="about">
+      <div class="about__column_logo">
+        <div class="about__logo">
+          <img class="about__logo_img" src="../images/logo-white.svg" alt="логотип">
+        </div>"
+      </div>
+      <div class="about__column_description">
+        <h3 class="about__title">Об аукционе</h3>
+        <div class="about__text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+            должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+            может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
+            критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в
+            эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <address class="footer__address">
+      <p>
+        <a class="link__inactive" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <br><a class="link__inactive" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br>наб. Принсенграхт 263- 265, Амстердам
+      </p>
+    </address>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li>
+          <a class="link__active" href="#main">главная</a>
+        </li>
+        <li>
+          <a class="link__inactive" href="#lots">посмотреть лоты</a>
+        </li>
+        <li>
+          <a class="link__inactive" href="#about">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="footer__social-list">
+      <li>
+        <a href="https://youtube.com" target="_blank">
+          <img class="footer__social-icon" src="./images/yt.svg" alt="youtube">
+        </a>
+      </li>
+      <li>
+        <a href="https://vk.com" target="_blank">
+          <img class="footer__social-icon" src="./images/vk.svg" alt="vk">
+        </a>
+      </li>
+      <li><a href="https://pinterest.com" target="_blank">
+          <img class="footer__social-icon" src="./images/pinterest.svg" alt="pinterest">
+        </a>
+      </li>
+    </ul>
+  </footer>
+</body>
+
 </html>
