ono-tebe-nado-fd.v2

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </a>
     <address class="header__address">
       <p>
-        <a class="link__inactive" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="link__inactive" href="tel:+99995555555">+9 999 555 5555</a>
         <br><a class="link__inactive" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br>наб. Принсенграхт 263- 265, Амстердам
       </p>
@@ -119,7 +119,7 @@
   <footer class="footer">
     <address class="footer__address">
       <p>
-        <a class="link__inactive" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="link__inactive" href="tel:+99995555555">+9 999 555 5555</a>
         <br><a class="link__inactive" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br>наб. Принсенграхт 263- 265, Амстердам
       </p>
